<?xml version="1.0"?>
<package>
  <name>inertiallabs_ins</name>
  <version>1.0.1</version>
  <description>The Inertial Labs INS package for CARMA</description>

  <maintainer email="goodarzm@vt.edu">Goodarz Mehr</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>inertiallabs_msgs</build_depend>
  <build_depend>gps_common</build_depend>
  <build_depend>cav_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>inertiallabs_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>gps_common</run_depend>
  <run_depend>cav_msgs</run_depend>


  <export>

  </export>
</package>
